--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Raleway&family=Roboto:ital,wght@0,400;0,500;1,300&family=Rubik&display=swap');
+
 .app {
     display: flex;
     flex-direction: column;
@@ -11,10 +13,11 @@
     height: 100vh;
     border: 3px solid #6f2961;
     border-radius: 5px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .app__header {
-    background: #d6c5d3;
+    background: #6f2961;
     height: 64px;
 
     display: flex;
@@ -22,6 +25,74 @@
     align-items: center;
     padding: 15px;
 }
+
+.app__header__logo {
+    width: 40px;
+}
+
+.app__header__navbar {
+    background: #6f2961;
+    flex: 1;
+    height: 64px;
+    /* width: 700px; */
+    display: flex;
+    /* justify-content: space-between; */
+    /* gap: 2rem; */
+    /* list-style: none; */
+    align-items: center;
+  }
+  
+  .nav-list {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    gap: 1rem;
+    
+
+  }
+
+  .nav-link {
+    color: white;
+    /* color: white; */
+    text-decoration: none;
+    
+  }
+  
+  .nav-link:hover {
+    font-style: italic;
+    border-bottom: 2px solid #fff;
+    padding: 4px 0;
+  }
+
+.left-side-nav {
+    flex: 1;
+    /* border: 1px solid yellow; */
+    /* width: 40%; */
+    /* display: flex; */
+    /* justify-content: space-between; */
+}
+
+  .right-side-nav {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    /* justify-content: flex-end; */
+  }
+
+  .app__header__navbar {
+    width: 100%;
+    /* display: flex; */
+    /* height: 120px; */
+  }
+
+  .app__header__keywords {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px;
+    color: white;
+  }
 
 .app__content {
     background: white;
@@ -35,11 +106,29 @@
 
 .app_header_input {
     flex: 1;
-    padding: 6px;
+    
+    /* padding: 3px; */
+    border: 1px solid #6f2961;
+    border-radius: 50px;
+    padding: 3px 3px 3px 40px;
+    background: white url("search.svg") no-repeat 13px;
+    
 }
 
+/* input.search {
+    width: 260px;
+    border: 1px solid #555;
+    display: block;
+    padding: 9px 4px 9px 40px;
+    background: transparent url("search.svg") no-repeat 13px;
+} */
+
 .app_header_button {
-    padding: 6px;
+    margin: 2px;
+    padding: 3px;
+    border: 1px solid #6f2961;
+    border-radius: 50px;
+    color:#6f2961;
 }
 
 .nav-block {
