HW6: add product list card

--- a/style.css
+++ b/style.css
@@ -148,3 +148,48 @@
     padding: 2px;
 }
 
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+.card {
+    box-shadow: 0 4px 8px 0 #d6c5d3;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+  }
+  
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #6f2961;
+    border-radius: 50px;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
+
+  .card img {
+    /* width: 300px; */
+    height: 300px;
+    object-fit: cover;
+  } 
+
+
+
